@@ -4,7 +4,7 @@ Date: 2010-11-22
 Title: Algorithms for Quantitative Pedology
 Author: Dylan Beaudette <debeaudette@ucdavis.edu>
 Maintainer: Dylan Beaudette <debeaudette@ucdavis.edu>
-Depends: R (>= 2.9.0), plyr, reshape, lattice, cluster, sp
+Depends: R (>= 2.9.0), plyr, reshape, lattice, cluster, sp, Hmisc
 Suggests: RColorBrewer, colorspace, maptools, foreign, doMC, foreach
 Description: A collection of algorithms related to modeling of soil resources, soil classification, soil profile aggregation, and visualization. 
 License: GPL (>= 2)
